# ai-native-sweng

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: coursectl-ci.yml  coursectl-release.yml  harness-ci.yml
configs/: checkpoints.json
configs/evaluation/: m08-lab.json
configs/models/: default.toml  scripted-demo.json
configs/policies/: hardened-config.json
coursectl/: README.md  go.mod  main.go
datasets/development/: README.md
datasets/manifests/: SCHEMA.md  bk-001.json  bk-002.json  bk-003.json  bk-004.json  bk-005.json  bk-006.json  bk-007.json  bk-008.json  bk-009.json  bk-010.json  bk-011.json  bk-012.json  bp-001.json  task-manifest.schema.json
datasets/practice/: README.md
docs/: checkpoints.md  model-modes.md  trace-events.md
scripts/: bootstrap.ps1  bootstrap.sh
src/anse_harness/: __init__.py
tests/approvals/: test_approval_gate.py
tests/budgets/: test_termination.py
tests/context/: test_builder.py  test_packet_schema.py  test_render.py  test_tokens.py
tests/evaluation/: test_dataset.py  test_evaluation_scaffolding.py  test_graders.py  test_inspect.py  test_metrics.py  test_report.py  test_runner.py
tests/instructions/: test_precedence.py
tests/integration/: test_scripted_end_to_end.py
tests/integrations/: test_github_adapter.py  test_integration_scaffolding.py  test_mcp_client.py
tests/policy/: test_command_policy.py
tests/reliability/: test_breaker.py  test_classify.py  test_controller.py  test_idempotency.py  test_injection.py  test_no_progress_window.py  test_reliability_scaffolding.py  test_retry_policy.py  test_worker_retry.py
tests/replay/: test_replay_adapter.py
tests/repository/: test_discovery.py  test_search.py  test_structure.py
tests/review/: test_consolidation.py  test_finding_schema.py
tests/runtime/: test_context_loop.py  test_limits.py  test_loop_scripted.py  test_replay_conformance.py  test_replay_conformance_context.py  test_replay_conformance_evaluation.py  test_replay_conformance_integrations.py  test_replay_conformance_multitool.py  test_replay_conformance_multiworker.py  test_replay_conformance_reliability.py  test_replay_conformance_security.py  test_replay_conformance_workflow.py  test_replay_conformance_write.py  test_sandbox.py  test_write_loop.py
tests/security/: test_hardened_config.py  test_injection_defense.py  test_policy_matrix.py  test_secret_hardening.py  test_security_scaffolding.py  test_trace_redaction.py
tests/state/: test_state_store.py
tests/tools/: test_edit_tools.py  test_read_file.py  test_readonly_tools.py
tests/tracing/: test_trace_complete.py  test_trace_complete_full.py
tests/unit/: test_error_classification.py  test_factory.py  test_live_wire_mapping.py  test_payload_serialization.py  test_scripted_adapter.py  test_task_manifests.py  test_tracing.py
tests/validation/: test_validation_pipeline.py
tests/workers/: test_contract_schema.py  test_worker_runner.py
tests/workflows/: test_comparison.py  test_engine.py  test_integration.py  test_multiworker_scaffolding.py  test_orchestrator.py  test_plan_artifact.py  test_resume.py  test_state_schema.py  test_task_graph.py  test_transitions.py
traces/examples/: investigation-demo.jsonl
traces/m02/: investigation_multitool.jsonl  read_file_investigation.jsonl
traces/m03/: write_task.jsonl
traces/m04/: context_investigation.jsonl
traces/m05/: workflow_feature_task.jsonl
(+216 files in other folders)
