[project]
name = "anse-harness"
version = "0.1.0"
description = "Engineering Harness for Software Development - AI-Native Software Engineering course platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ai-eng-bootcamps" }]
requires-python = ">=3.11"
# Core runtime is stdlib-only so scripted and replay model modes work with
# zero third-party dependencies installed.
dependencies = []

[project.optional-dependencies]
# Provider SDKs for live model mode (spec 5.3, 21). Install with:
#   uv sync --extra live
live = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anse_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Course exercise tests (the student implements the scaffolding to make them pass) are
# marked "student_impl" and excluded from the default run, so this suite validates the
# supplied harness and stays green on a fresh clone and in CI. Run the exercises with:
#   uv run pytest -m student_impl
addopts = "-m 'not student_impl'"
markers = [
    "student_impl: a course exercise the student implements; excluded from the default and CI run",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
# Pragmatic relaxations: provider SDKs are optional and imported lazily.
[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "google.*"]
ignore_missing_imports = true
